Update: updated the filmByIdForm.html to read 'Get Film by Id'

--- a/WebContent/filmByIdForm.html
+++ b/WebContent/filmByIdForm.html
@@ -9,7 +9,7 @@
   <form action="FilmbyId.do" method="GET">
     Name:
     <input type="text" name="filmId"/> 
-    <input type="submit" value="Get State Data" />
+    <input type="submit" value="Get Film by Id" />
   </form>
 </body>
 </html>
