--- a/WebContent/filmByIdForm.html
+++ b/WebContent/filmByIdForm.html
@@ -7,9 +7,9 @@
 <body>
   <h3>Films</h3>
   <form action="FilmbyId.do" method="GET">
-    Id:
+    Film ID:
     <input type="text" name="filmId"/> 
-    <input type="submit" value="Get Film by Id" />
+    <input type="submit" value="Get Film by ID" />
   </form>
 </body>
 </html>
