--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<a href="filmByIdForm.html">Get Film by ID</a>
+	<a href="addFilmForm.html">Add New Film</a>
 	<br />
 </body>
 </html>
