--- a/WebContent/addFilmForm.html
+++ b/WebContent/addFilmForm.html
@@ -10,8 +10,10 @@
     <input type="text" name="title" placeholder="title"> 
     <br/>
     <input type="text" name="language_id" placeholder="language_id"/> 
-    
-    <input type="submit" value="Add Film" />
+    <br/>
+ 
+<!--      [id=0, title=We, description=null, release_year=null, language_id=23, rental_duration=0, rental_rate=0.0, length=0, replacement_cost=0.0, rating=null, special_features=null, laCast=null, language=null]
+ -->    <input type="submit" value="Add Film" />
   </form>
 </body>
 </html>
