--- a/WebContent/addFilmForm.html
+++ b/WebContent/addFilmForm.html
@@ -12,8 +12,7 @@
     <input type="text" name="language_id" placeholder="language_id"/> 
     <br/>
  
-<!--      [id=0, title=We, description=null, release_year=null, language_id=23, rental_duration=0, rental_rate=0.0, length=0, replacement_cost=0.0, rating=null, special_features=null, laCast=null, language=null]
- -->    <input type="submit" value="Add Film" />
+  <input type="submit" value="Add Film" />
   </form>
 </body>
 </html>
