--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,10 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <title>Films</title>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
 </head>
 <body>
+	</div>
 	<a href="filmByIdForm.html">Get Film by ID</a>
-	<a href="addFilmForm.html">Add New Film</a>
 	<br />
+	<a href="addFilmForm.html">Add New Film</a>
+
+	<form action="searchFilmByKeyword.do" method="GET">
+
+		<div class="form-group">
+			<label for="exampleInputPassword1">Search</label> <input type="text"
+				class="form-control" name="keyWord" placeholder="keyword in title/description">
+		</div>
+		<button type="submit" class="btn btn-primary">Submit</button>
+	</form>
+	<br />
+
+	</div>
 </body>
 </html>
