--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Films</title>
+<link rel="stylesheet" type="text/css" href="resources/css/style.css">
+
+
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -13,21 +16,32 @@
 	crossorigin="anonymous"></script>
 </head>
 <body>
-	</div>
-	<a href="filmByIdForm.html">Get Film by ID</a>
-	<br />
-	<a href="addFilmForm.html">Add New Film</a>
+	<h1>Welcome to Filmopedia</h1>
+	<h4>The Free Encyclopedia</h4>
+	<div class="container">
 
-	<form action="searchFilmByKeyword.do" method="GET">
 
-		<div class="form-group">
-			<label for="exampleInputPassword1">Search</label> <input type="text"
-				class="form-control" name="keyWord" placeholder="keyword in title/description">
+		<div class="mainsection justify-content-center">
+			<form action="searchFilmByKeyword.do" method="GET">
+
+				<div class="form-group">
+					<label for="exampleInputPassword1">Search</label> <input
+						type="text" class="form-control" name="keyWord"
+						placeholder="keyword in title/description">
+				</div>
+				<button type="submit" class="btn btn-primary">Search</button>
+			</form>
+			<br /> <a href="filmByIdForm.html">Get Film by ID</a> <br /> <a
+				href="addFilmForm.html">Add New Film</a>
+
 		</div>
-		<button type="submit" class="btn btn-primary">Submit</button>
-	</form>
-	<br />
 
 	</div>
+
+
+
+
+
+
 </body>
 </html>
