--- a/WebContent/addFilmForm.html
+++ b/WebContent/addFilmForm.html
@@ -8,9 +8,9 @@
 <h3>New Film</h3>
 
   <form action="addFilm.do" method="POST">
-    <input type="text" name="title" placeholder="title"> 
+    <input type="text" name="title" required placeholder="title"> 
     <br/>
-    <input type="text" name="language_id" placeholder="language_id"/> 
+    <input type="text" name="language_id" required placeholder="language_id"/> 
     <br/>
  
   <input type="submit" value="Add Film" />
