Update: Changes to addActorForm.html and index.html

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -43,8 +43,11 @@
 					<div class="col-sm-4">
 						<a href="filmByIdForm.html">Get Film by ID</a>
 					</div>
-					<div class="col-sm-8">
+					<div class="col-sm-4">
 						<a href="addFilmForm.html">Add New Film</a>
+					</div>
+					<div class="col-sm-4">
+						<a href="addActorForm.html">Add New Film</a>
 					</div>
 				</div>
 
