added ui to editFilm

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,13 +27,12 @@
 			</div>
 
 			<div class="searchForm">
-
 				<form action="searchFilmByKeyword.do" method="GET">
 					<div class="form-group">
 						<label class="searchlabel" for="search">Search:</label>
 						<div class="input-group col-xs-12">
 
-							<input type="text" class="form-control" name="keyWord"
+							<input type="text" required class="form-control" name="keyWord"
 								placeholder="keyword in title/description">
 							<button type="submit" class="submit btn btn-primary">Search</button>
 						</div>
@@ -47,19 +46,9 @@
 						<a href="addFilmForm.html">Add New Film</a>
 					</div>
 				</div>
-
-
 			</div>
-
-
 		</div>
-
 	</div>
-
-
-
-
-
 
 </body>
 </html>
