--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -46,7 +46,7 @@
 						<a href="addFilmForm.html">Add New Film</a>
 					</div>
 					<div class="col-sm-4">
-						<a href="addActorForm.html">Add New Film</a>
+						<a href="addActorForm.html">Add New Actor</a>
 					</div>
 				</div>
 			</div>
