--- a/WebContent/addActorForm.html
+++ b/WebContent/addActorForm.html
@@ -28,7 +28,7 @@
 						<input type="text" name="first_name" placeholder="first_name"> <br />
 						<input type="text" name="last_name" placeholder="last_name" />
 						<br />
-						<button type="submit" class="submit btn btn-primary">Search</button>
+						<button type="submit" class="submit btn btn-primary">Add</button>
 					</div>
 				</div>
 			</form>
