--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,8 +18,6 @@
 <body>
 
 	<div class="container">
-
-
 		<div class="mainsection justify-content-center">
 			<div class="headerSection text-center">
 				<h1 class="header">Welcome to Filmopedia</h1>
@@ -45,12 +43,15 @@
 					<div class="col-sm-4">
 						<a href="addFilmForm.html">Add New Film</a>
 					</div>
-					<div class="col-sm-4">
+				</div>
+			<!-- 	<div class="row pull-left"> -->
+					<div class="col-sm-5 pull-left">
 						<a href="addActorForm.html">Add New Actor</a>
 					</div>
-				</div>
+			<!-- 	</div> -->
 			</div>
 		</div>
+	</div>
 	</div>
 
 </body>
